--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch" : "jest --watch"
+    "test:watch": "jest --watch"
   },
   "author": "Alexandre",
   "license": "MIT",
   "dependencies": {
+    "curl": "^0.1.4",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
