--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watchAll",
+    "dockerUp": "docker-compose -f infra/compose.yaml up -d --force-recreate"
   },
   "author": "Alexandre",
   "license": "MIT",
   "dependencies": {
     "curl": "^0.1.4",
     "next": "^13.1.6",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
