--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Implementação do https://www.tabnews.com.br/ para estudar programação.",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run docker:Up && next dev",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "dockerUp": "docker-compose -f infra/compose.yaml up -d --force-recreate"
+    "docker:Up": "docker-compose -f infra/compose.yaml up -d --force-recreate",
+    "docker:Stop": "docker-compose -f infra/compose.yaml stop",
+    "docker:Down": "docker-compose -f infra/compose.yaml down"
   },
   "author": "Alexandre",
   "license": "MIT",
