--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Implementação do https://www.tabnews.com.br/ para estudar programação.",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run services:Up && npm run services:wait:database && npm run migration:up && next dev",
+    "dev": "npm run services:Up && npm run services:wait:database && npm run migrations:up && next dev",
     "test": "npm run services:Up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
+    "posttest": "npm run services:Stop",
     "test:watch": "jest --watchAll --runInBand",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
