refactor: use `orchestrator.cleardatabase()` in tests

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "npm run services:Up && npm run services:wait:database && npm run migrations:up && next dev",
     "test": "npm run services:Up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "posttest": "npm run services:Stop",
-    "test:watch": "jest --watchAll --runInBand",
+    "test:watch": "jest --watchAll --runInBand --verbose",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "next lint --dir .",
